# spl

./: Makefile.am  README  README.md  configure.ac
include/: 1DSignal.hh  1DSignal.hxx  2DSignal.hh  2DSignal.hxx  3DSignal.hh  3DSignal.hxx  BoundMorpher.hh  BoundMorpher.hxx  DPoint.hh  Differentials.hh  Domain.hh  Downsampler.hh  Exceptions.hh  Histogram.hh  Iterator.hh  Makefile.am  Makefile.in  Mean.hxx  MedianFilter.hh  NDSignal.hh  NDSignal.hxx  Point.hh  Point.hxx  SignalUtils.hh  SignalUtils.hxx  Upsampler.hh  Upsampler.hxx  any.hh  stdtools.hh  utils.hh
include/cl/: 2DSignal.hh  CLSignal.hxx  ExternalProcess.hh  metatools.hh
include/io/: io.hh  io.hxx
include/spl/: 1DSignal.hh  1DSignal.hxx  2DSignal.hh  2DSignal.hxx  3DSignal.hh  3DSignal.hxx  BoundMorpher.hh  BoundMorpher.hxx  DPoint.hxx  Differentials.hh  Domain.hh  Downsampler.hh  Filter.hh  Histogram.hh  Makefile.am  Makefile.in  Mean.hh  Mean.hxx  MedianFilter.hh  NDSignal.hh  Point.hxx  SignalUtils.hh  SignalUtils.hxx  Upsampler.hxx
include/spl/cl/: 2DSignal.hh  2DSignal.hxx  CLSignal.hh  metatools.hh
include/spl/io/: io.hh  io.hxx
tests/: Makefile.am  VERSION.xml  check_cl.cc  check_differentials.cc  check_histogram.cc  check_mean.cc  check_sampling.cc  check_signal_access.cc  check_signal_io.cc  check_signal_utils.cc  run_sanity_checker.sh
tests/kernels/: add2vectors.cl  set210.cl
tools/: Makefile.am  raw2csv.cc
