SUBDIRS = .
spldir=spl
spl_HEADERS = 1DSignal.hh\
									1DSignal.hxx\
									2DSignal.hh\
									2DSignal.hxx\
									3DSignal.hh\
									3DSignal.hxx\
									any.hh\
									BoundMorpher.hh\
									BoundMorpher.hxx\
									Domain.hh\
									DPoint.hh\
									DPoint.hxx\
									Exceptions.hh\
									Histogram.hh\
									Iterator.hh\
									Makefile.am\
									Makefile.in\
									Mean.hh\
									Mean.hxx\
									NDSignal.hh\
									NDSignal.hxx\
									Point.hh\
									Point.hxx\
									SignalUtils.hh\
									SignalUtils.hxx\
									stdtools.hh\
									Upsampler.hh\
									Upsampler.hxx\
									Filter.hh\
									MedianFilter.hh\
									Downsampler.hh\
									utils.hh
