SUBDIRS = .
spldir=spl
cldir=spl/cl
iodir=spl/io

spl_HEADERS = 1DSignal.hh\
							1DSignal.hxx\
							2DSignal.hh\
							2DSignal.hxx\
							3DSignal.hh\
							3DSignal.hxx\
							any.hh\
							BoundMorpher.hh\
							BoundMorpher.hxx\
							Domain.hh\
							DPoint.hh\
							DPoint.hxx\
							Exceptions.hh\
							Histogram.hh\
							Iterator.hh\
							Mean.hh\
							Mean.hxx\
							NDSignal.hh\
							NDSignal.hxx\
							Point.hh\
							Point.hxx\
							SignalUtils.hh\
							SignalUtils.hxx\
							stdtools.hh\
							Upsampler.hh\
							Filter.hh\
							MedianFilter.hh\
							Downsampler.hh

cl_HEADERS = cl/2DSignal.hh\
						 cl/2DSignal.hxx\
						 cl/CLSignal.hh\
						 cl/CLSignal.hxx

io_HEADERS = io/io.hh\
						 io/io.hxx
