SUBDIRS = .

nobase_include_HEADERS = \
							spl/1DSignal.hh\
							spl/1DSignal.hxx\
							spl/2DSignal.hh\
							spl/2DSignal.hxx\
							spl/3DSignal.hh\
							spl/3DSignal.hxx\
							spl/any.hh\
							spl/BoundMorpher.hh\
							spl/BoundMorpher.hxx\
							spl/Domain.hh\
							spl/DPoint.hh\
							spl/DPoint.hxx\
							spl/Exceptions.hh\
							spl/Histogram.hh\
							spl/Iterator.hh\
							spl/Mean.hh\
							spl/Mean.hxx\
							spl/NDSignal.hh\
							spl/NDSignal.hxx\
							spl/Point.hh\
							spl/Point.hxx\
							spl/SignalUtils.hh\
							spl/SignalUtils.hxx\
							spl/stdtools.hh\
							spl/Upsampler.hh\
							spl/Filter.hh\
							spl/MedianFilter.hh\
							spl/Downsampler.hh\
							spl/Differentials.hh
							\
							spl/cl/2DSignal.hh\
							spl/cl/2DSignal.hxx\
							spl/cl/CLSignal.hh\
							spl/cl/CLSignal.hxx\
							\
							spl/io/io.hh\
							spl/io/io.hxx


